# hash-sig

./: .gitignore  Cargo.toml  README.md  benchmark-mean.py  profile.json
.github/workflows/: rust.yml
benches/: benchmark.rs  benchmark_beamy.rs  benchmark_fixed_sum_perm_wnitz.rs  benchmark_fixed_sum_wnitz.rs  benchmark_hashtree.rs  benchmark_lamport.rs  benchmark_perm_wnitz.rs  benchmark_poseidon.rs  benchmark_poseidon_top_level.rs  benchmark_sha.rs  benchmark_templates_ots.rs  benchmark_wnitz.rs  chunks.rs  tweak_hash.rs
precompute/: layer_sizes_w_10_v_upto_100.txt  layer_sizes_w_11_v_upto_100.txt  layer_sizes_w_2_v_upto_100.txt  layer_sizes_w_3_v_upto_100.txt  layer_sizes_w_4_v_upto_100.txt  layer_sizes_w_5_v_upto_100.txt  layer_sizes_w_6_v_upto_100.txt  layer_sizes_w_7_v_upto_100.txt  layer_sizes_w_8_v_upto_100.txt  layer_sizes_w_9_v_upto_100.txt
src/: hypercube.rs  inc_encoding.rs  indexsig.rs  lib.rs  onetimesig.rs  signature.rs  symmetric.rs  tweak_hash.rs
src/inc_encoding/: basic_winternitz.rs  mod.rs  target_sum.rs
src/onetimesig/: beamy.rs  fixed_sum_permuted_winternitz.rs  fixed_sum_winternitz.rs  lamport.rs  permuted_winternitz.rs  winternitz.rs
src/signature/: generalized_xmss.rs  mod.rs
src/signature/generalized_xmss/: instantiations_poseidon.rs  instantiations_poseidon_top_level.rs  instantiations_sha.rs
src/symmetric/: hashprf.rs  hashtree.rs  message_hash.rs  prf.rs  sha.rs  tweak_hash.rs  tweak_hash_tree.rs
src/symmetric/message_hash/: mod.rs  poseidon.rs  sha.rs  top_level_poseidon.rs
src/symmetric/prf/: hashprf.rs  mod.rs  sha.rs  shake_to_field.rs
src/symmetric/tweak_hash/: poseidon.rs  sha.rs
